--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ body {font-family: "Lato", sans-serif}
     <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
     <a href="https://co2-emissions.glitch.me/#" class="w3-bar-item w3-button w3-padding-large">HOME</a>
     <a href="https://australia-co2.firebaseio.com" class="w3-bar-item w3-button w3-padding-large">FireBase</a>
-    <a href="Aus.html" class="w3-bar-item w3-button w3-padding-large">Australia</a>
+    <a href="Australia.html" class="w3-bar-item w3-button w3-padding-large">Australia</a>
 
 
     <div class="w3-dropdown-hover w3-hide-small">
